--- a/assets/i18n/Translation_de_CH.properties
+++ b/assets/i18n/Translation_de_CH.properties
@@ -1,4 +1,4 @@
-function_not_found=I don't know how to %s (%s)
-redundant_argument=I don't know what to do with %s (%s)
-variable_not_found=I couldn't find %s
-not_expected=%s expects %s but received %s
+function_not_found=Ich weiss nicht wie %s (%s)
+redundant_argument=Ich weiss nicht, was ich mit %s tun soll (%s)
+variable_not_found=Ich kann %s nicht finden
+not_expected=%s erwartet %s, hat %s bekommen
